--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="user-info">
                 <div class="info">
                     <h2 class="name">Carlos Morais</h2>
-                    <h3 class="job">Developer</h3>
+                    <h3 class="job">Veterinário</h3>
                 </div>
                 <button title="Deslogar">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
